plugins {
    id 'java-library'
    id 'maven'
}

group 'org.fpeterek.flightlidar48.database'
version '1.0'

targetCompatibility = '14'
sourceCompatibility = '14'

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'joda-time:joda-time:2.10.8'
    implementation 'org.postgresql:postgresql:42.2.12'
    implementation 'org.apache.kafka:kafka-streams:2.6.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
    implementation 'org.json:json:20200518'
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs += '--enable-preview'
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

jar {
    archiveName 'database.jar'
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
